All tests are now working.